[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Clouds.gd" type="Script" id=1]
[ext_resource path="res://src/Shockwave.gd" type="Script" id=2]
[ext_resource path="res://assets/shaders/Shockwave.shader" type="Shader" id=3]
[ext_resource path="res://assets/shaders/Bloom.shader" type="Shader" id=4]
[ext_resource path="res://assets/shaders/Clouds.shader" type="Shader" id=5]
[ext_resource path="res://assets/misc/Amatic-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/NameInput.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/color = Color( 0.129412, 0.129412, 0.129412, 1 )
shader_param/offset = null
shader_param/alpha = 1.0
shader_param/seed = -100.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 5 )
shader_param/color = Color( 0.113725, 0.113725, 0.113725, 1 )
shader_param/offset = null
shader_param/alpha = 1.0
shader_param/seed = 200.0

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 5 )
shader_param/color = Color( 0.384314, 0.384314, 0.384314, 1 )
shader_param/offset = null
shader_param/alpha = 1.0
shader_param/seed = 100.0

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/origin = Vector2( 0.5, 0.5 )
shader_param/amount = 0.0
shader_param/size = 0.0
shader_param/feather = 0.05
shader_param/thickness = 0.03

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/hdr_threshold = 0.7
shader_param/amount = 7.0
shader_param/speed = 2.0

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float screen_width = 1024;
uniform float screen_height = 600;

// Curvature
uniform float BarrelPower =1.1;
// Color bleeding
uniform float color_bleeding = 1.2;
uniform float bleeding_range_x = 3;
uniform float bleeding_range_y = 3;
// Scanline
uniform float lines_distance = 4.0;
uniform float scan_size = 2.0;
uniform float scanline_alpha = 0.9;
uniform float lines_velocity = 30.0;

vec2 distort(vec2 p) 
{
	float angle = p.y / p.x;
	float theta = atan(p.y,p.x);
	float radius = pow(length(p), BarrelPower);
	
	p.x = radius * cos(theta);
	p.y = radius * sin(theta);
	
	return 0.5 * (p + vec2(1.0,1.0));
}

void get_color_bleeding(inout vec4 current_color,inout vec4 color_left){
	current_color = current_color*vec4(color_bleeding,0.5,1.0-color_bleeding,1);
	color_left = color_left*vec4(1.0-color_bleeding,0.5,color_bleeding,1);
}

void get_color_scanline(vec2 uv,inout vec4 c,float time){
	float line_row = floor((uv.y * screen_height/scan_size) + mod(time*lines_velocity, lines_distance));
	float n = 1.0 - ceil((mod(line_row,lines_distance)/lines_distance));
	c = c - n*c*(1.0 - scanline_alpha);
	c.a = 1.0;
}

void fragment()
{
	vec2 xy = SCREEN_UV * 2.0;
	xy.x -= 1.0;
	xy.y -= 1.0;
	
	float d = length(xy);
	if(d < 1.5){
		xy = distort(xy);
	}
	else{
		xy = SCREEN_UV;
	}
	
	float pixel_size_x = 1.0/screen_width*bleeding_range_x;
	float pixel_size_y = 1.0/screen_height*bleeding_range_y;
	vec4 color_left = texture(SCREEN_TEXTURE,xy - vec2(pixel_size_x, pixel_size_y));
	vec4 current_color = texture(SCREEN_TEXTURE,xy);
	get_color_bleeding(current_color,color_left);
	vec4 c = current_color+color_left;
	get_color_scanline(xy,c,TIME);
	COLOR = c;

}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/screen_width = 1024.0
shader_param/screen_height = 600.0
shader_param/BarrelPower = 1.05
shader_param/color_bleeding = 0.0
shader_param/bleeding_range_x = 0.0
shader_param/bleeding_range_y = 0.0
shader_param/lines_distance = 2.0
shader_param/scan_size = 2.0
shader_param/scanline_alpha = 1.0
shader_param/lines_velocity = 30.0

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=11]
LineEdit/icons/LineEdit = null
StyleBox/icons/StyleBox = null

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=10]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 100
font_data = ExtResource( 6 )

[node name="NameInput" type="Node2D"]
script = ExtResource( 8 )

[node name="BgCanvas" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="BgCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds3" type="ColorRect" parent="BgCanvas"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.680298
margin_top = -0.777771
margin_right = -0.680298
margin_bottom = -0.777771
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds2" type="ColorRect" parent="BgCanvas"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.618774
margin_top = -2.07666
margin_right = 0.618774
margin_bottom = -2.07666
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds1" type="ColorRect" parent="BgCanvas"]
visible = false
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.777771
margin_bottom = -0.777771
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCanvas" type="CanvasLayer" parent="."]

[node name="Shockwave" type="ColorRect" parent="MainCanvas"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.78857
margin_top = 2.78864
margin_right = 2.78857
margin_bottom = 2.78864
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bloom" type="BackBufferCopy" parent="MainCanvas"]
copy_mode = 2
rect = Rect2( 0, 0, 1024, 600 )

[node name="BloomEffect" type="ColorRect" parent="MainCanvas/Bloom"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LensDistort" type="BackBufferCopy" parent="MainCanvas"]
copy_mode = 2
rect = Rect2( 0, 0, 1024, 600 )

[node name="LensDistortEffect" type="ColorRect" parent="MainCanvas/LensDistort"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="TextEdit" parent="MainCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -25.0
margin_right = 150.0
margin_bottom = 35.0
rect_scale = Vector2( 1, 1.00253 )
custom_fonts/font = SubResource( 9 )
custom_colors/background_color = Color( 0, 0, 0, 0 )
text = "Some name that is"
caret_block_mode = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MainCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -43.7524
margin_right = 250.0
margin_bottom = 56.2476
rect_pivot_offset = Vector2( 250, 50 )
theme = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 10 )
align = 1
caret_blink = true
caret_blink_speed = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainCanvas"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -155.72
margin_bottom = -18.7201
custom_fonts/font = SubResource( 14 )
text = "Enter your name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Go" parent="MainCanvas" instance=ExtResource( 7 )]
margin_left = -110.0
margin_top = 82.2429
margin_right = 110.0
margin_bottom = 182.243
rect_pivot_offset = Vector2( 110, 50 )
text = "Go"
scene_to_load = "Game"

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2( 5, 5 )
[connection signal="text_changed" from="MainCanvas/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="MainCanvas/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="clicked" from="MainCanvas/Go" to="." method="_on_Go_clicked"]
